# krcore-artifacts

./: .gitattributes  .gitignore  .gitmodules  README.md  rsync.sh
KRdmaKit/: Cargo.toml
KRdmaKit-syscall/: Cargo.toml  Kbuild  Kbuild-DC  Kbuild-RC  Kbuild-hybrid  Kbuild-lite  Kbuild-meta-client  Kbuild-meta-rpc  Kbuild-meta-server  Makefile  build.rs
KRdmaKit-syscall/src/: client.rs  consts.rs  core.rs  lib.rs  virtual_queue.rs
KRdmaKit-syscall/src/mem/: mod.rs
KRdmaKit-syscall/src/native/: kernel_helper.c
KRdmaKit-syscall/src/rpc/: mod.rs  protocol.rs
KRdmaKit-syscall/tests/: CMakeLists.txt  test_bind.cc  test_connect.cc  test_nil.cc  test_poll_rpc.cc  test_rc.cc  test_reg_mr.cc  test_two_sided_rc.cc
KRdmaKit-syscall/two-sided-dc/KRdmaKit/: Cargo.toml
KRdmaKit-syscall/two-sided-dc/KRdmaKit-syscall/: Cargo.toml  Makefile  build.rs
KRdmaKit-syscall/two-sided-dc/KRdmaKit-syscall/src/: bindings.rs  client.rs  core.rs  lib.rs  virtual_queue.rs
KRdmaKit-syscall/two-sided-dc/KRdmaKit-syscall/tests/: CMakeLists.txt  test_connect.cc  test_rc.cc  test_two_sided_rc.cc
KRdmaKit-syscall/two-sided-dc/KRdmaKit/src/: ctrl.rs  device.rs  ib_path_explorer.rs  lib.rs  net_util.rs
KRdmaKit-syscall/two-sided-dc/KRdmaKit/unitests/: Kbuild
KRdmaKit-syscall/two-sided-dc/include/: common.h  syscall.h
KRdmaKit-syscall/two-sided-dc/rust-kernel-linux-util/: Cargo.toml  README.md  build.rs
KRdmaKit-syscall/two-sided-dc/rust-kernel-linux-util/src/: lib.rs  rwlock.rs  timer.rs
KRdmaKit-syscall/two-sided-dc/rust-kernel-rdma-base/: Cargo.toml  build.rs
KRdmaKit-syscall/two-sided-dc/rust-kernel-rdma-base/src/: bindings.rs  funcs.rs  lib.rs  ofed_4_9_3_1_5_0.rs  types.rs
KRdmaKit-syscall/two-sided-dc/rust-kernel-rdma-base/unitests/: Makefile
KRdmaKit/benchmark/server/: Cargo.toml
KRdmaKit/benchmark/server/src/: main.rs
KRdmaKit/benchmark/throughput/: Cargo.toml
KRdmaKit/examples/: doorbell.rs  hello.rs  ib-exp.rs  loopback-rc.rs  loopback-ud.rs  loopback_rc.rs  loopback_ud.rs  memory_window.rs  rc_read_bench.rs  user-rc-cm.rs  user_rc_cm.rs
KRdmaKit/src/: completion_queue.rs  consts.rs  context.rs  ctrl.rs  lib.rs  memory_region.rs  memory_window.rs  udriver.rs  utils.rs
KRdmaKit/src/comm_manager/: client.rs  explorer.rs  mod.rs  send.rs  server.rs
KRdmaKit/src/queue_pairs/: builder.rs  callbacks.rs  doorbell_helper.rs  dynamic_connected_transport.rs  endpoint.rs  handshake_kernel.rs  handshake_user.rs  mod.rs  operations_kernel.rs  operations_user.rs  rc_comm.rs
KRdmaKit/src/runtime/: error.rs  mod.rs  task.rs  tid.rs  waitable.rs  wake_fn.rs  work_group.rs  worker.rs  worker_group.rs
KRdmaKit/src/services/: rc.rs
KRdmaKit/src/services_user/: cm.rs  mod.rs  rc_user.rs
KRdmaKit/unitests-kernel/: run_tests.py
KRdmaKit/unitests-kernel/comm_manager/: Cargo.toml
KRdmaKit/unitests-kernel/comm_manager_error/: Cargo.toml
KRdmaKit/unitests-kernel/dynamic_connected_transport/: Cargo.toml
KRdmaKit/unitests-kernel/global_context/: Cargo.toml
KRdmaKit/unitests-kernel/memory_region/: Cargo.toml
KRdmaKit/unitests-kernel/reliable_connection/: Cargo.toml
KRdmaKit/unitests-kernel/unreliable_datagram/: Cargo.toml
KRdmaKit/unitests/comm_manager/: Cargo.toml
KRdmaKit/unitests/dynamic_connected_transport/: Cargo.toml
KRdmaKit/unitests/global_context/: Cargo.toml
benchs/: Makefile
examples/rc/: Cargo.toml
examples/rc/src/: client.rs  lib.rs  server.rs
examples/rc/tests/: test.rs
exp/: CMakeLists.txt  Dockerfile  huge_region.hh  memory_region.hh  reg_mr.cc  reporter.hh
exp/LITE/: common.h
exp/LITE/lib/: Makefile  compiler.h  lite-lib.c  lite-lib.h  lite_join.c  lite_latency.c  lite_rpc.c  lite_write.c
exp/LITE/one-sided/: lite_client.cc
exp/full-mesh/: trigger.cc
exp/full-mesh/kernel/: worker.cc
exp/full-mesh/user/: kv_server.cc  worker.cc
exp/motiv-connect/: connect_simulation.cc  ibv_fork.cc  mem_profile.cc  profile.hh  rc_connect_client.cc  rc_connect_client_kernel.cc  rc_connect_server.cc  rc_onesided_client_kernel.cc  run.toml  ud_msg.hh
exp/motiv-connect/val/: cpu.hh
exp/motiv-kit-breakdown/rc_break_down_client/: Cargo.toml
exp/one-sided/: krc_client-docker.cc  krc_client.cc  urc_client.cc  urc_server.cc
exp/race-hasing/: analyser.cc  trigger.cc
exp/race-hasing/krcore/: elastic_worker.cc  elastic_worker_tail_lat.cc
exp/race-hasing/user/: elastic_worker.cc  elastic_worker_tail_lat.cc  server.cc
exp/rcopy/: client.cc  server.cc
exp/two-sided/: kernel_twosided_rc_client.cc  kernel_twosided_rc_server.cc  kernel_twosided_rc_zcpy_client.cc  kernel_twosided_rc_zcpy_server.cc  user_payload_latency_rc_client.cc  user_payload_latency_rc_server.cc  user_twosided_rc_client.cc  user_twosided_rc_server.cc
mlnx-ofed-4.9-driver/rdma-core-50mlnx1/kernel-boot/: CMakeLists.txt  rdma-persistent-naming.rules
rdma-shim/: Cargo.toml
rdma-shim/src/: kernel.rs  lib.rs
rdma-shim/src/user/: bindings.rs  ffi.rs  mod.rs  utils.rs
rust-kernel-rdma/KRdmaKit/: Cargo.toml
rust-kernel-rdma/KRdmaKit/examples/: hello.rs  loopback-ud.rs  loopback.rs
rust-kernel-rdma/KRdmaKit/src/: completion_queue.rs  consts.rs  context.rs  device.rs  device_v1.rs  ib_path_explorer.rs  kdriver.rs  lib.rs  memory_region.rs  net_util.rs  thread_local.rs  udriver.rs  utils.rs
rust-kernel-rdma/rust-kernel-linux-util/: Cargo.toml  build.rs
rust-kernel-rdma/rust-kernel-linux-util/src/: bindings.rs  kthread.rs  level.rs  lib.rs  macros.rs  string.rs  timer.rs
rust-kernel-rdma/rust-kernel-linux-util/unitests/: Makefile
rust-kernel-rdma/rust-kernel-rdma-base/: Cargo.toml  README.md  build.rs
rust-kernel-rdma/rust-kernel-rdma-base/src/: allocator.rs  bindings.rs  consts.rs  funcs.rs  lib.rs  ofed_4_4_2_0_7_0.rs  ofed_4_9_3_1_5_0.rs  ofed_5_4_1_0_3_0.rs  types.rs
rust-user-rdma/: Cargo.toml  README.md  build.rs
rust-user-rdma/src/: bindings.h  lib.rs
rust-user-rdma/src/native/: exp.c
user-benchs/bench_rdma/: Cargo.toml
user-benchs/bench_rdma/src/: main.rs
user-benchs/bench_server/: Cargo.toml
user-benchs/bench_server/src/: main.rs
(+997 files in other folders)
