[package]
name = "KRdmaKit"
version = "0.1.0"
authors = ["Xingda Wei <wxdwfc@gmail.com>", "Fangming Lu", "Haotian Wang"]
edition = "2018"

[dependencies]
rdma-shim = {path = "../rdma-shim"} 
no-std-net = { path = "../rust-kernel-rdma/deps/no-std-net" }
nostd_async = "0.3.1"
futures-micro = "0.4"
## spinlock
spin = "0.9.2"           ## spin lock
hashbrown = "0.9"
thiserror-no-std = "2.0.2"
delegate = "*"

[features]
dct = ["rdma-shim/dct"]
kernel = ["rdma-shim/kernel"]
user = ["rdma-shim/user"]
profile = []

## IF enable `rpc_server`, the `poll_all` will busy polling the UD result. IF disabled, the application should
## explicitly call `poll_all` to fetch all of the results.
rpc_server = []

## lazy static
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
