[package]
name = "rust-user-rdma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
no-std-net = {path = "../rust-kernel-rdma/deps/no-std-net"}


[build-dependencies]
bindgen = "0.54.0" ## FIXME: update
