[workspace]

[package]
name = "rc_tests"
version = "0.1.0"
authors = ["wxd","Haotian Wang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]
test = false

[features]
default = ["KRdmaKit", "rust-kernel-linux-util","krdma-test"]

[dependencies]
KRdmaKit = { path = "../../rust-kernel-rdma/KRdmaKit", optional = true, features=["dct"] }
rust-kernel-linux-util = {path = "../../rust-kernel-rdma/rust-kernel-linux-util",optional = true, features=["static_log_check","max_level_info"]}
krdma-test = {path = "../../rust-kernel-rdma/krdma-test",optional = true}
hashbrown = "0.9"
thiserror-no-std = "2.0.2"

## lazy static
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dev-dependencies]
kernel-module-testlib = { path = "../../rust-kernel-rdma/testlib" }

[profile.dev]
opt-level = 2
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true # Enable debug print in test by default
overflow-checks = true   # overflow-checks is currently not a bottleneck
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
