[package]
name = "bench_rdma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.19"
KRdmaKit = { path = "../../KRdmaKit", features = ["user"] }
lazy_static = "1.4.0"
rand = "0.8.5"
rand_chacha = "*"

[features]
OFED_5_4 = ["KRdmaKit/OFED_5_4"]
signaled = []
