[package]
name = "throughput"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
KRdmaKit = { path = "../../../KRdmaKit", features = ["user", "rdma-runtime"] }
rand = "0.8.5"
clap = { version = "4.0.24", features = ["derive"] }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1