[workspace]

[package]
name = "rfork_tests"
version = "0.1.0"
authors = ["CaribouW <1071956678@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
test = false

[features]
default = ["KRdmaKit"]
[dependencies]
KRdmaKit = { path = "../../../KRdmaKit", optional = true, features = ["dct"] }
hashbrown = "0.9"

## lazy static
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dev-dependencies]
kernel-module-testlib = { path = "../../../testlib" }

[profile.dev]
opt-level = 2