[workspace]

[package]
name = "log-level-static-tests"
version = "0.1.0"
authors = ["xmm <wxdwfc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]
test = false

[features]
default = ["rust-kernel-linux-util"]

[dependencies]
rust-kernel-linux-util = {path = "../../../rust-kernel-linux-util",optional = true, features=["static_log_check","max_level_error"]}


[dev-dependencies]
kernel-module-testlib = { path = "../../../testlib" }
