[workspace]

[package]
name = "sample_tests"
version = "0.1.0"
authors = ["xmm <wxdwfc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]
test = false

[features]
default = ["rust-kernel-rdma-base"]

[dependencies]
rust-kernel-rdma-base = {path = "../../../rust-kernel-rdma-base",optional = true}


[dev-dependencies]
kernel-module-testlib = { path = "../../../testlib" }
