[workspace]

[package]
name = "cm_funcs_tests"
version = "0.1.0"
authors = ["xmm <wxdwfc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]
test = false

[features]
default = ["rust-kernel-rdma-base"]

[dependencies]
rust-kernel-rdma-base = {path = "../..",optional = true}

## lazy static
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[dev-dependencies]
kernel-module-testlib = { path = "../../../testlib" }
